--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <tr>
             <td> <img src="manish.png" alt="profile picture"></td>
             <td><h1>MANISH KUMAR</h1>
-                <p><em><strong>FOUNDER</strong> and the <strong>CEO</strong> of this <a href="file:///C:/Users/manis/OneDrive/Desktop/altidudu1/index.html">website</a></em></p>
+                <p><em><strong>FOUNDER</strong> of this <a href="file:///C:/Users/manis/OneDrive/Desktop/altidudu1/index.html">website</a></em></p>
                 <p>i am a student.currently i am studying in <a href="https://northcampus.cambridge.edu.in/">cambridge institute of technology north campus</a>.my stream is computer science and engineering.</p><td>
         </tr>
     </table>
